https://bugs.webkit.org/show_bug.cgi?id=36318

Patch by Anders Bakken  <Anders Bakken <agbakken@gmail.com>> on 2010-03-18
Reviewed by Simon Hausmann.

QtLauncher runs as a GuiClient by default in Qt Embedded which will
make it try to connect to an existing GuiServer. This patch makes it
run like a stand-alone app.

* QtLauncher/main.cpp:
(LauncherApplication::LauncherApplication):

Canonical link: https://commits.webkit.org/47516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56222 268f45cc-cd09-0410-ab3c-d52691b4dbfc